FEATURE: Core  | Added option to add download specific sub-directory to move-on-complete folder [Parg]
FEATURE: Core  | Added a "launch content" library option to launch largest playable file [Parg]
FEATURE: Core  | New "Subscription Templates" to allow common filters to be inherited [Parg]
FEATURE: Core  | Option to mark a subscription result as read in all subscriptions [Parg]
FEATURE: Plug  | Support for creating subscriptions for file-size based RCM lookups [Parg]
FEATURE: UI    | Shift+C on sidebar entry to mark all read in subscription [Parg]
FEATURE: UI    | Added menu item to show details of file links for selected downloads [Parg]
FEATURE: UI    | Added optional library header; Library options menu link [Parg]
FEATURE: UI    | Show file auto-priority settings in open-torrent-options dialog [Parg]
FEATURE: UI    | Added backward+forward library navigation toolbar items [Parg]
FEATURE: UI    | Added menu option to mark multiple subscription results read/unread [Parg]
FEATURE: UI    | Added "public" and "update interval" columns to Subscriptions view [Parg]
FEATURE: UI    | Handle some confusable Unicode chars in various table filters [Parg,fubar99]
FEATURE: UI    | Add legend to swarm view [Parg]
FEATURE: UI    | Added menu option to create subs template when none defined [Parg]
FEATURE: UI    | Added a right-bar view [Parg]
FEATURE: UI    | New "Piece Blocks" view [Parg]
FEATURE: UI    | Added a "Done (bytes)" library column [Parg]
FEATURE: UI    | Add option to only show category buttons in library complete section [Parg]
FEATURE: UI    | Right-click header option on Progress column to disable 3D look [Parg]
FEATURE: UI    | Added option to disable gradient fill for table/sidebar selection [Parg]
FEATURE: UI    | Added private-torrent column to Library [Parg]
FEATURE: UI    | Option to disable table header gradient fill [Parg]
FEATURE: UI    | Order column header menu option to set from current sort [Parg]
