@@ -5426,6 +5426,8 @@ TableColumn.header.private.torrent.info=Private torrent
 ConfigView.section.style.header.gradient=Gradient fill header
 menu.set.order.from.sort=Set {TableColumn.header.#} from Current Sort
 menu.set.order.for.selection=Set {TableColumn.header.#} for Current Selection
+ConfigView.label.skipIncompDLFileChecks=Defer incomplete download file checks until first use - improves startup times but may result in errors later
+
 
 #
 #
